# CLEAR

./: README.md  pyproject.toml
src/LECL/: convert_to_deit.py  create_classes.py  main_moco.py  vits.py
src/LECL/moco/: builder.py  data.py  loader.py
src/downstreamtasks/: ABMIL.py  config_DL.py  data.py  model.py  train_crossval.py  trainer.py
src/extract_features/SOTA/: BiomedCLIP_feature_extraction.py  Merlin_feature_extraction.py  SAM2_feature_extraction.py
src/extract_features/SSL_models/: sslfeatures_extract_mambaout.py  sslfeatures_extract_vit_convbase.py  sslfeatures_extract_vmamba.py
